# testability-demo

./: .gitignore  pyproject.toml  typings.py  weather.py  weather_test.py
weather/: __init__.py  __main__.py  app_logic.py  console_io.py  file_io.py  typings.py  web_io.py
weather_geolocationdb/: __init__.py
weather_test/: e2e_test.py  plugin_test.py  unit_test.py
weather_tkinter/: __main__.py
