[tool.poetry]
name = "testability-demo"
version = "0.1.0"
description = "Code for a text about testability"
authors = ["delaterie <in/maksim-stepanov-b2ab76165>", "rattus-aristarchus <lankin.m.a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
