[tool.poetry]
name = "testability-demo"
version = "0.1.0"
description = "Code for a text about testability"
authors = ["delaterie <in/maksim-stepanov-b2ab76165>", "rattus-aristarchus <lankin.m.a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "7.4.3"
requests = "2.31.0"
allure-pytest = "2.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: mark a test that performs slow IO operations",
    "fast: mark a fast test that isn't bound to any IO operation",
]
